# birdfly

./: App.tsx  README.md  app.json  babel.config.js  package-lock.json  package.json  pkg_bkp.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt
ios/: Podfile
ios/Bird/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/Bird.xcodeproj/: project.pbxproj
src/components/common/: AlertComponent.jsx  BackButtonComponent.jsx  BackButtonWithHeader.jsx  Buttons.jsx  ChatCard.jsx
src/components/layouts/: AddCardDetailsComponent.jsx  AddWalletDetailsComponent.jsx  BirdCoinInfoComponent.jsx  BirdCoinMetricsComponent.jsx  BirdCoinPageComponent.jsx  CancelButtonAdviseComponent.jsx  CancelReasonsComponent.jsx  CarCardComponent.jsx  ChatCardComponent.jsx  ChooseLocationComponent.jsx  CodeVerificationComponent.jsx  CreateAccountComponent.jsx  DriveToSpecificCustomerComponent.jsx  DriverCodeComponent.jsx  DriverOnTheWayComponent.jsx  DriverProfileComponent.jsx  DriverReviewComponent.jsx  EndOfTheTripComponent.jsx  HomeComponent.jsx  InsideCarComponent.jsx  LoginComponent.jsx  MapViewComponent.jsx  NotificationComponent.jsx  PasswordComponent.jsx  PrincipalLoginComponent.jsx  PushNotificationsLoginComponent.jsx  RaceHistoryComponent.jsx  (+13 more)
src/navigation/: DrawerNavigator.jsx  Navigator.jsx
src/screens/: Alert.jsx  BirdCoinInfo.jsx  CreateAccount.jsx  DriverCode.jsx  MapScreen.jsx  Notifications.jsx  Password.jsx  TurnOnLocation.jsx
src/utils/: Animations.js  Constants.jsx  PlacesAutoComplete.js
(+29 files in other folders)
